# BorASM

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.json
cmake/: version.cmake
include/: ArgumentsParserLogic.h  AssemblyEngine.h  BorAsm.h  CharacterStringLineHandler.h  CmdArguments.h  CmdArgumentsParser.h  CodeAnalyzer.h  CpuOperationCodes.h  CpuRegisters.h  FileHandler.h  IArgumentsParserLogic.h  IAssemblyEngine.h  ICharacterStringLineHandler.h  ICodeAnalyzer.h  IFileHandler.h  IInstructionsAssemblerCore.h  InstructionsAssemblerCore.h  LabelsDetector.h  Tools.h
scripts/: build_all.sh  cpplint_check.sh  format_code.sh
src/: ArgumentsParserLogic.cpp  AssemblyEngine.cpp  BorAsm.cpp  CharacterStringLineHandler.cpp  CmdArgumentsParser.cpp  CodeAnalyzer.cpp  CpuOperationCodes.cpp  CpuRegisters.cpp  FileHandler.cpp  InstructionsAssemblerCore.cpp  LabelsDetector.cpp  Tools.cpp  main.cpp
tests/: CMakeLists.txt
tests/mocks/: ArgumentsParserLogicMock.h  AssemblyEngineMock.h  CharacterStringLineHandlerMock.h  CodeAnalyzerMock.h  FileHandlerMock.h  InstructionsAssemblerCoreMock.h
tests/src/: ArgumentsParserLogicTest.cpp  AssemblyEngineTest.cpp  BorAsmTest.cpp  CharacterStringLineHandlerTest.cpp  CmdArgumentsParserTest.cpp  CodeAnalyzerTest.cpp  FileHandlerTests.cpp  InstructionsAssemblerCoreTest.cpp  sample_test.cpp  version_test.cpp
